--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/tablet.css" />
     <link rel="stylesheet" href="css/screen.css" />
     <link rel="stylesheet" href="css/variables.css" />
-    <link rel="stylesheet" href="css/fontawesome/css/all.css" />
+    <link rel="stylesheet" href="fontawesome/css/all.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Lora&display=swap"
       rel="stylesheet"
