zmniejszenie plikow graficznych

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="hero__logo">
           <img class="logo" src="Identyfikacja/logo_1.png" alt="logo" />
         </div>
-        <div data-aos="fade-down" class="hero__intro">
+        <div class="hero__intro">
           <h1>
             Witamy w świecie zdrowej żywności! Pragniemy przedstawić Ci
             aplikację, dzięki której zostaniesz kulinarnym fit guru, a zjedzenie
