--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
           <p>
             Osobiście zaś uwielbiam podróżować, spać pod namiotem, malować
             (obrazy), a szczytem marzeń jest wieczór z dobrą książką i kubkiem
-            gorącej czekolady
+            gorącej czekolady.
           </p>
           <div class="aboutUs__social">
             <a
@@ -323,9 +323,9 @@
             PAULINA MALINOWSKA
           </div>
           <p>
-            Inżynier przygody, który na codzień nadzoruje budynki z betonu, a w
+            Inżynier dobrego jedzenia, który na codzień nadzoruje budynki z betonu, a w
             wolnej chwili ogląda tajlandzkie seriale i rysuje przystojnych
-            panów. Totalny freak fantastyki spędzający większą część dnia w
+            panów. Totalny freak fantastyki, spędzający większą część dnia w
             obłokach.
           </p>
           <div class="aboutUs__social">
