poprawka literówki w hero

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             Witamy w świecie zdrowej żywności! Pragniemy przedstawić Ci
             aplikację, dzięki której zostaniesz kulinarnym fit guru, a zjedzenie
             burgera z pokrzywy nie będzie dla Ciebie wyzwaniem! Nie czekaj!
-            Kliknij w przycisk poniżej, aby zapisać się do naszego Newsleterra!
+            Kliknij w przycisk poniżej, aby zapisać się do naszego Newslettera!
           </h1>
           <br />
           <h2>Niech moc kukurydzy będzie z Tobą!</h2>
