ZE-Formularz-bug - error do checkboxa

--- a/index.html
+++ b/index.html
@@ -413,10 +413,11 @@
           </section>
 
           <div class="newsletter__input box">
-            <input type="checkbox" class="input" name="my-checkbox" id="opt-in" />
+            <input type="checkbox" class="input" id="opt-in" />
             <label for="opt-in">Wyrażam zgodę na otrzymywanie informacji handlowych drogą
               elektroniczną na podany powyżej adres poczty elektronicznej
               wysyłanych przez ZdrowEat</label>
+            <small>Error</small>
           </div>
 
           <section class="newsletter__input submission">
