--- a/index.html
+++ b/index.html
@@ -41,19 +41,13 @@
   </nav>
 
   <div class="hero__wrapper" id="dom">
+    <div class="hero__background"></div>
     <header class="hero">
       <div class="hero__logo">
         <img class="logo" src="Identyfikacja/logo_1.png" alt="logo" />
       </div>
       <div class="hero__intro">
-        <h1>
-          Witamy w świecie zdrowej żywności! Pragniemy przedstawić Ci
-          aplikację, dzięki której zostaniesz kulinarnym fit guru, a zjedzenie
-          burgera z pokrzywy nie będzie dla Ciebie wyzwaniem! Nie czekaj!
-          Kliknij w przycisk poniżej, aby zapisać się do naszego Newslettera!
-        </h1>
-        <br />
-        <h2>Niech moc kukurydzy będzie z Tobą!</h2>
+        <div class="hero__icon-1"><h1>Tylko zdrowa żywność</h1></div>
       </div>
       <div class="hero__button">
         <button type="button" class="btn btn-outline-dark btn-lg">
