Dodanie nowych teł i zmiana pozycjonowania

--- a/index.html
+++ b/index.html
@@ -39,16 +39,18 @@
       </li>
     </ul>
   </nav>
-
+<!------------------ HERO -------------------------->
   <div class="hero__wrapper" id="dom">
     <div class="hero__background"></div>
     <header class="hero">
-      <div class="hero__logo">
-        <img class="logo" src="Identyfikacja/logo_1.png" alt="logo" />
-      </div>
+      <div class="hero__logo"><img class="logo" src="/Identyfikacja/logo_1.png" alt=""></div>
       <div class="hero__intro">
-        <div class="hero__icon-1"><h1>Tylko zdrowa żywność</h1></div>
+        <div class="hero__icon"><i class="fas fa-seedling"></i><h1>Cenimy zdrową żywność</h1></div>
+        <div class="hero__icon"><i class="fas fa-map-marker-alt"></i><h1>Znajdź miejsce, gdzie chcesz zjeść</h1></div>
+        <div class="hero__icon"><i class="fab fa-pagelines"></i><h1>Kupuj naturalne produkty</h1></div>
       </div>
+      
+   <!------ Zapis na premiere ---------------------->
       <div class="hero__button">
         <button type="button" class="btn btn-outline-dark btn-lg">
           <a href="#news" class="link__button">Zapisz się</a>
@@ -56,6 +58,7 @@
       </div>
     </header>
   </div>
+<!------------------ INFO -------------------------->
   <div class="container" id="container">
     <section class="info" id="info">
       <div class="info__item info--1">
@@ -120,6 +123,7 @@
         </p>
       </div>
     </section>
+<!--------------------MORE INFO -------------------------->
     <section class="moreInfo" id="more">
       <div class="moreInfo__wrapper">
         <div class="moreInfo__title">Dowiedz się więcej</div>
@@ -258,6 +262,7 @@
         </div>
       </div>
     </section>
+    <!-------------------- ABOUT US -------------------------->
     <section class="aboutUs" id="about">
       <div class="aboutUs__content content--1">
         <div data-aos="flip-left">
@@ -374,6 +379,7 @@
         </div>
       </div>
     </section>
+<!--------------------- FORMULARZ -------------------------->
     <footer class="newsletter" id="news">
       <div class="newsletter__wrapper">
         <div class="newsletter__title">
