--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="hero__intro">
         <div class="hero__prompt">
           <div class="hero__icon"><i class="h--icon fas fa-seedling"></i></div>
-          <h1>Bądź ECO</h1>
+          <h1>Nadchodzi aplikacja dla Eco Maniaków</h1>
         </div>
         <div class="hero__prompt">
           <div class="hero__icon"><i class="h--icon fas fa-map-marker-alt"></i></div>
