--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
    <!------ Zapis na premiere ---------------------->
       <div class="hero__button">
         <button type="button" class="btn btn-outline-dark btn-lg">
-          <a href="#news" class="link__button">Zapisz się</a>
+          <a href="#news" class="link__button">Otrzymaj newsletter</a>
         </button>
       </div>
     </article>
