ZE-Funkcje-3 - dodano tytuł sekcji w HTML

--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
 <!------------------ INFO -------------------------->
   <div class="container" id="container">
     <section class="info" id="info">
+      <div class="info__title">
+        <header class="title">O PROJEKCIE</header>
+      </div>
       <div class="info__item info--1">
         <div class="info__icon icon--1">
           <i class="fas fa-utensils"></i>
@@ -132,7 +135,7 @@
           Sklep zamknęli Ci przed nosem? Trwa wojna lub pandemia? Nie łam się
           - sprawdź nasz sklep online! Oferujemy szeroki asortyment produktów
           BIO od sprawdzonych dostawców. Jesteśmy czynni 24h na dobę, 7 dni w
-          tygodniu dostawy realizujemy bezpłatnie w ciągu 1 doby od
+          tygodniu, a dostawy realizujemy bezpłatnie w ciągu 1 doby od
           zamówienia. <br />
           Sprawdź nas!
         </p>
