--- a/index.html
+++ b/index.html
@@ -282,6 +282,9 @@
     </section>
     <!-------------------- ABOUT US -------------------------->
     <section class="aboutUs" id="about">
+      <div class="aboutUs__title">
+        <header class="aU__title">O NAS - TO MY TWORZYMY ZDROWEAT!</header>
+      </div>
       <div class="aboutUs__content content--1">
         <div data-aos="flip-left">
           <div class="photo photo--1"></div>
