ZE-AboutUs-8 - poprawiona literówka w paragrafie

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           brak, ZdrowEat przychodzi z odsieczą! Sałatki, power bowle, burgery
           roślinne - u nas znajdziesz sprawdzone przepisy, dzięki którym Twoja
           dieta będzie smaczna i zbilansowana. <br />
-          Gotój zdrowo - żyj zdrowo!
+          Gotuj zdrowo - żyj zdrowo!
         </p>
       </div>
       <div class="info__item info--3">
