Ze-cookies - tekst w html

--- a/index.html
+++ b/index.html
@@ -449,12 +449,15 @@
     </footer>
 
     <div class='cookie hidden'>
-      <p>ZdrowEat wykorzystuje pliki cookie zgodnie z ustawieniami Twojej przeglądarki. Korzystając z naszych usług,
-        akceptujesz używanie takich plików. Dowiedz się więcej o plikach cookieWięcej na ten temat
-        możesz przeczytać w <a href='#' class='cookie__policy'>Polityce prywatności.</a>
-      </p>
-
-      <button class="cookie__close">Lubię ciasteczka!</button>
+      <div class='cookie__text'>
+        <p>ZdrowEat wykorzystuje pliki cookie zgodnie z ustawieniami Twojej przeglądarki. Korzystając z naszych usług,
+          akceptujesz używanie takich plików. Więcej na ten temat
+          możesz przeczytać w <a href='#' class='cookie__policy'>Polityce prywatności.</a>
+        </p>
+      </div>
+      <div class='cookie__button'>
+        <button class="cookie__close">Akceptuję</button>
+      </div>
     </div>
   </div>
 
