--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
     <!------------------ HERO -------------------------->
     <div class="hero__wrapper" id="dom">
       <div class="hero__background"></div>
+      <div class="hero__background slide1"></div>
+      <div class="hero__background slide2"></div>
+      <div class="hero__background slide3"></div>
+
+      
+
       <header class="hero">
         <article class="hero__content">
           <div class="hero__logo">
@@ -83,6 +89,10 @@
             </button>
           </div>
         </article>
+      
+         <!-- Next and previous buttons -->
+      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+      <a class="next" onclick="plusSlides(1)">&#10095;</a>
       </header>
     </div>
     <!------------------ INFO -------------------------->
