Ze-Identyfikacja-Karina - tekst w stopce

--- a/index.html
+++ b/index.html
@@ -453,7 +453,10 @@
     </div>
 
   </footer>
-  <div class='copyright'>Strona stworzona przez:....</div>
+  <div class='copyright'>
+    <p>Strona stworzona przez Karinę, Paulinę, Michała i Maćka</p>
+    <p>Wszelkie prawa zastrzeżone</p>
+  </div>
 
   <div class="cookie hidden">
     <div class="cookie__text">
