--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
     </nav>
     <!------------------ HERO -------------------------->
     <div class="hero__wrapper" id="dom">
-      <div class="hero__background"></div>
-      <div class="hero__background slide1"></div>
-      <div class="hero__background slide2"></div>
-      <div class="hero__background slide3"></div>
+      <div class="hero__background fade"></div>
+      <div class="hero__background slide1 fade"></div>
+      <div class="hero__background slide2 fade"></div>
+      <div class="hero__background slide3 fade"></div>
 
       
 
