Zmaiana button w hero i dodanie margin top dla screen

--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
           </div>
 
           <!------ Zapis na premiere ---------------------->
-          <div class="hero__button">
-            <button type="button" class="btn btn-outline-dark btn-lg">
-              <a href="#news" class="link__button">Otrzymaj newsletter</a>
+          <div class="hero__button__sub">
+            <button type="button" class="hero__button">
+              <a href="#news" class="link__button">Bądź pierwszy!</a>
             </button>
           </div>
         </article>
