poprawka zrodla w logo

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <header class="hero">
         <article class="hero__content">
           <div class="hero__logo">
-            <img class="logo" src="/Identyfikacja/logo_1.png" alt="" />
+            <img class="logo" src="../Identyfikacja/logo_1.png" alt="" />
           </div>
           <!-- --HASLA-- -->
           <div class="hero__intro">
