--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
           <header class="aU__title">O NAS - TO MY TWORZYMY ZDROWEAT!</header>
         </div>
         <div class="aboutUs__content content--1">
-          <div data-aos="flip-left">
+          <div data-aos="flip-left" class="photo__wrapper">
             <div class="photo photo--1"></div>
           </div>
 
@@ -341,7 +341,7 @@
           </div>
         </div>
         <div class="aboutUs__content content--2">
-          <div data-aos="flip-left">
+          <div data-aos="flip-left" class="photo__wrapper">
             <div class="photo photo--2"></div>
           </div>
           <div class="aboutUs__name">
@@ -381,7 +381,7 @@
           </div>
         </div>
         <div class="aboutUs__content content--3">
-          <div data-aos="flip-left">
+          <div data-aos="flip-left" class="photo__wrapper">
             <div class="photo photo--3"></div>
           </div>
           <div class="aboutUs__name">
@@ -421,7 +421,7 @@
           </div>
         </div>
         <div class="aboutUs__content content--4">
-          <div data-aos="flip-left">
+          <div data-aos="flip-left" class="photo__wrapper">
             <div class="photo photo--4"></div>
           </div>
           <div class="aboutUs__name">
