ZE-AnimatedAboutUs - Nadanie nowych klas w sekcji2

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
             (obrazy), a szczytem marzeń jest wieczór z dobrą książką i kubkiem
             gorącej czekolady.
           </p>
-          <div class="aboutUs__social">
+          <div class="aboutUs__social hidden__aboutUs">
             <a
               href="https://www.facebook.com/"
               class="social--1 social__facebook"
@@ -353,7 +353,7 @@
             przystojnych panów. Totalny freak fantastyki, spędzający większą
             część dnia w obłokach.
           </p>
-          <div class="aboutUs__social">
+          <div class="aboutUs__social hidden__aboutUs">
             <a
               href="https://www.facebook.com/"
               class="social--2 social__facebook"
@@ -393,7 +393,7 @@
             Prywatnie uwielbiam sport (piłka nożna, tenis) i wszystko co
             związane z awioniką.
           </p>
-          <div class="aboutUs__social">
+          <div class="aboutUs__social hidden__aboutUs">
             <a
               href="https://www.facebook.com/"
               class="social--3 social__facebook"
@@ -432,7 +432,7 @@
             jedzenia, który pod wpływem nacisków i rosnącej masy ciała szuka
             smakowitych alternatyw dla ociekających tłuszczem mięsiw.
           </p>
-          <div class="aboutUs__social">
+          <div class="aboutUs__social hidden__aboutUs">
             <a
               href="https://www.facebook.com/"
               class="social--4 social__facebook"
