ZE-AnimatedAboutUs - Zmiana ikon socjal mediów

--- a/index.html
+++ b/index.html
@@ -316,27 +316,26 @@
           <div class="aboutUs__social hidden__aboutUs">
             <a
               href="https://www.facebook.com/"
-              class="social--1 social__facebook"
+              class="social--1"
             >
               <i class="fab fa-facebook"></i>
             </a>
             <a
-              href="https://www.instagram.com/"
-              class="social--1 social__instagram"
+              href="https://www.onet.pl/"
+              class="social--1"
             >
-              <i class="fab fa-instagram"></i>
+              <i class="fas fa-home"></i>
             </a>
             <a
-              href="https://www.twitter.com/"
-              class="social--1 social__twitter"
+              href="https://www.linkedin.com/"
+              class="social--1"
             >
-              <i class="fab fa-twitter"></i>
+              <i class="fab fa-linkedin"></i>
             </a>
             <a
               href="https://github.com/infoshareacademy/jfdz14-zdroweat"
-              class="social--1 social__homepage"
-            >
-              <i class="fas fa-home"></i>
+              class="social--1">
+              <i class="fab fa-github"></i>
             </a>
           </div>
         </div>
@@ -356,27 +355,27 @@
           <div class="aboutUs__social hidden__aboutUs">
             <a
               href="https://www.facebook.com/"
-              class="social--2 social__facebook"
+              class="social--2"
             >
               <i class="fab fa-facebook"></i>
             </a>
             <a
-              href="https://www.instagram.com/"
-              class="social--2 social__instagram"
+              href="https://www.onet.pl/"
+              class="social--2"
             >
-              <i class="fab fa-instagram"></i>
+              <i class="fas fa-home"></i>
             </a>
             <a
-              href="https://www.twitter.com/"
-              class="social--2 social__twitter"
+              href="https://www.linkedin.com/"
+              class="social--2"
             >
-              <i class="fab fa-twitter"></i>
+              <i class="fab fa-linkedin"></i>
             </a>
             <a
               href="https://github.com/infoshareacademy/jfdz14-zdroweat"
-              class="social--2 social__homepage"
+              class="social--2"
             >
-              <i class="fas fa-home"></i>
+              <i class="fab fa-github"></i>
             </a>
           </div>
         </div>
@@ -396,27 +395,27 @@
           <div class="aboutUs__social hidden__aboutUs">
             <a
               href="https://www.facebook.com/"
-              class="social--3 social__facebook"
+              class="social--3"
             >
               <i class="fab fa-facebook"></i>
             </a>
             <a
-              href="https://www.instagram.com/"
-              class="social--3 social__instagram"
+              href="https://www.onet.pl/"
+              class="social--3"
             >
-              <i class="fab fa-instagram"></i>
+              <i class="fas fa-home"></i>
             </a>
             <a
-              href="https://www.twitter.com/"
-              class="social--3 social__twitter"
+              href="https://www.linkedin.com/"
+              class="social--3"
             >
-              <i class="fab fa-twitter"></i>
+              <i class="fab fa-linkedin"></i>
             </a>
             <a
               href="https://github.com/infoshareacademy/jfdz14-zdroweat"
-              class="social--3 social__homepage"
+              class="social--3"
             >
-              <i class="fas fa-home"></i>
+              <i class="fab fa-github"></i>
             </a>
           </div>
         </div>
@@ -435,27 +434,27 @@
           <div class="aboutUs__social hidden__aboutUs">
             <a
               href="https://www.facebook.com/"
-              class="social--4 social__facebook"
+              class="social--4"
             >
               <i class="fab fa-facebook"></i>
             </a>
             <a
-              href="https://www.instagram.com/"
-              class="social--4 social__instagram"
+              href="https://www.onet.pl/"
+              class="social--4"
             >
-              <i class="fab fa-instagram"></i>
+              <i class="fas fa-home"></i>
             </a>
             <a
-              href="https://www.twitter.com/"
-              class="social--4 social__twitter"
+              href="https://www.linkedin.com/"
+              class="social--4"
             >
-              <i class="fab fa-twitter"></i>
+              <i class="fab fa-linkedin"></i>
             </a>
             <a
               href="https://github.com/infoshareacademy/jfdz14-zdroweat"
-              class="social--4 social__homepage"
+              class="social--4"
             >
-              <i class="fas fa-home"></i>
+              <i class="fab fa-github"></i>
             </a>
           </div>
         </div>
