ZE-AnimatedAboutUs - zmiany w index.html

--- a/index.html
+++ b/index.html
@@ -338,6 +338,31 @@
             (obrazy), a szczytem marzeń jest wieczór z dobrą książką i kubkiem
             gorącej czekolady.
           </p>
+          <div class="aboutUs__social2">
+            <a
+              href="https://www.facebook.com/"
+              class="social--1"
+            >
+              <i class="fab fa-facebook"></i>
+            </a>
+            <a
+              href="https://www.onet.pl/"
+              class="social--1"
+            >
+              <i class="fas fa-home"></i>
+            </a>
+            <a
+              href="https://www.linkedin.com/"
+              class="social--1"
+            >
+              <i class="fab fa-linkedin"></i>
+            </a>
+            <a
+              href="https://github.com/infoshareacademy/jfdz14-zdroweat"
+              class="social--1">
+              <i class="fab fa-github"></i>
+            </a>
+          </div>
         </div>
         <div class="aboutUs__content content--2">
           <div data-aos="flip-left" class="photo__wrapper">
@@ -378,6 +403,32 @@
             przystojnych panów. Totalny freak fantastyki, spędzający większą
             część dnia w obłokach.
           </p>
+          <div class="aboutUs__social2">
+            <a
+              href="https://www.facebook.com/"
+              class="social--2"
+            >
+              <i class="fab fa-facebook"></i>
+            </a>
+            <a
+              href="https://www.onet.pl/"
+              class="social--2"
+            >
+              <i class="fas fa-home"></i>
+            </a>
+            <a
+              href="https://www.linkedin.com/"
+              class="social--2"
+            >
+              <i class="fab fa-linkedin"></i>
+            </a>
+            <a
+              href="https://github.com/infoshareacademy/jfdz14-zdroweat"
+              class="social--2"
+            >
+              <i class="fab fa-github"></i>
+            </a>
+          </div>
         </div>
         <div class="aboutUs__content content--3">
           <div data-aos="flip-left" class="photo__wrapper">
@@ -418,6 +469,32 @@
             Prywatnie uwielbiam sport (piłka nożna, tenis) i wszystko co
             związane z awioniką.
           </p>
+          <div class="aboutUs__social2">
+            <a
+              href="https://www.facebook.com/"
+              class="social--3"
+            >
+              <i class="fab fa-facebook"></i>
+            </a>
+            <a
+              href="https://www.onet.pl/"
+              class="social--3"
+            >
+              <i class="fas fa-home"></i>
+            </a>
+            <a
+              href="https://www.linkedin.com/"
+              class="social--3"
+            >
+              <i class="fab fa-linkedin"></i>
+            </a>
+            <a
+              href="https://github.com/infoshareacademy/jfdz14-zdroweat"
+              class="social--3"
+            >
+              <i class="fab fa-github"></i>
+            </a>
+          </div>
         </div>
         <div class="aboutUs__content content--4">
           <div data-aos="flip-left" class="photo__wrapper">
@@ -457,6 +534,32 @@
             jedzenia, który pod wpływem nacisków i rosnącej masy ciała szuka
             smakowitych alternatyw dla ociekających tłuszczem mięsiw.
           </p>
+          <div class="aboutUs__social2">
+            <a
+              href="https://www.facebook.com/"
+              class="social--4"
+            >
+              <i class="fab fa-facebook"></i>
+            </a>
+            <a
+              href="https://www.onet.pl/"
+              class="social--4"
+            >
+              <i class="fas fa-home"></i>
+            </a>
+            <a
+              href="https://www.linkedin.com/"
+              class="social--4"
+            >
+              <i class="fab fa-linkedin"></i>
+            </a>
+            <a
+              href="https://github.com/infoshareacademy/jfdz14-zdroweat"
+              class="social--4"
+            >
+              <i class="fab fa-github"></i>
+            </a>
+          </div>
         </div>
       </section>
       <!--------------------- FORMULARZ -------------------------->
