--- a/index.html
+++ b/index.html
@@ -48,12 +48,10 @@
     </nav>
     <!------------------ HERO -------------------------->
     <div class="hero__wrapper" id="dom">
-      <div class="hero__background fade"></div>
-      <div class="hero__background slide1 fade"></div>
-      <div class="hero__background slide2 fade"></div>
-      <div class="hero__background slide3 fade"></div>
-
-      
+      <div class="hero__background  fade"></div>
+      <div class="hero__background slide--1 fade"></div>
+      <div class="hero__background slide--2 fade"></div>
+      <div class="hero__background slide--3 fade"></div>
 
       <header class="hero">
         <article class="hero__content">
@@ -91,8 +89,8 @@
         </article>
       
          <!-- Next and previous buttons -->
-      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-      <a class="next" onclick="plusSlides(1)">&#10095;</a>
+      <a class="arrow prev" >&#10094;</a>
+      <a class="arrow next" >&#10095;</a>
       </header>
     </div>
     <!------------------ INFO -------------------------->
