--- a/index.html
+++ b/index.html
@@ -48,10 +48,9 @@
     </nav>
     <!------------------ HERO -------------------------->
     <div class="hero__wrapper" id="dom">
-      <div class="hero__background  fade"></div>
-      <div class="hero__background slide--1 fade"></div>
-      <div class="hero__background slide--2 fade"></div>
-      <div class="hero__background slide--3 fade"></div>
+      <div class="hero__background  slide"></div>
+      <div class="hero__background slide--1 slide"></div>
+      <div class="hero__background slide--2 slide"></div>
 
       <header class="hero">
         <article class="hero__content">
@@ -81,9 +80,9 @@
           </div>
 
           <!------ Zapis na premiere ---------------------->
-          <div class="hero__button">
-            <button type="button" class="btn btn-outline-dark btn-lg">
-              <a href="#news" class="link__button">Otrzymaj newsletter</a>
+          <div class="hero__button section">
+            <button type="button" class="hero__button">
+              <a href="#news" class="link__button">Bądź pierwszy</a>
             </button>
           </div>
         </article>
