section id renamed

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </label>
     <ul class="menu__list">
       <li class="menu__item menu--home">
-        <a href="#start" class="link">HOME</a>
+        <a href="#dom" class="link">HOME</a>
       </li>
       <li class="menu__item menu--about">
         <a href="#info" class="link">O PROJEKCIE</a>
@@ -42,7 +42,7 @@
     </ul>
   </nav>
   <!------------------ HERO -------------------------->
-  <div class="hero__wrapper" id="dom">
+  <div class="hero__wrapper" id="start">
     <div class="hero__background  fade"></div>
     <div class="hero__background slide--1 fade"></div>
     <div class="hero__background slide--2 fade"></div>
