--- a/game/index.html
+++ b/game/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./main.css">
     <link rel="stylesheet" href="../fontawesome/css/all.css" />
+    <link href="https://fonts.googleapis.com/css?family=Lora&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Merriweather&display=swap" rel="stylesheet" />
     <title>Snake OOP</title>
 
 </head>
@@ -13,10 +15,10 @@
         <h2 class="score"></h2>
         <canvas class="canvas" height="608" width="608"></canvas>
         <div class="arrow__container">
-            <i class="fas fa-arrow-circle-up arrowUp arrow"></i>
-            <i class="fas fa-arrow-circle-left arrowLeft arrow"></i>
-            <i class="fas fa-arrow-circle-right arrowRight arrow"></i>
-            <i class="fas fa-arrow-circle-down arrowDown arrow"></i>
+            <i class="fas fa-caret-square-up arrowUp arrow"></i>
+            <i class="fas fa-caret-square-left arrowLeft arrow"></i>
+            <i class="fas fa-caret-square-right arrowRight arrow"></i>
+            <i class="fas fa-caret-square-down arrowDown arrow"></i>
         </div>
     </div>
     
