dodanie nav do Gry

--- a/game/index.html
+++ b/game/index.html
@@ -12,7 +12,10 @@
 </head>
 <body>
     <div class="container">
+     <div class="gameNav">
+        <button class="gamePlay">ZASADY GRY</button>
         <h2 class="score"></h2>
+     </div>
         <canvas class="canvas" height="608" width="608"></canvas>
         <div class="arrow__container">
             <i class="fas fa-caret-square-up arrowUp arrow"></i>
