ZE-Game-3 - zmiana instrukcji gry

--- a/game/game.html
+++ b/game/game.html
@@ -26,18 +26,17 @@
             <ol>
                 <li> Nasz wąż planuje długie życie, dlatego nie pije, nie pali, a także odżywia się zdrowo. W związku z
                     tym, za każdego zjedzonego brokuła otrzymasz punkt, a wąż w nagrodę urośnie. Natomiast jedzenie
-                    „śmieciowego” żarcia skraca węża i zabiera Twoje punkty.</li>
+                    „śmieciowego” żarcia skraca węża i zabiera Twoje punkty. Uważaj - niezdrowe jedzenie pojawia się z nienacka!</li>
                 <li> Nasz wąż jest domatorem, nie lubi wychodzić ze swojego domu. Nie denerwuj więc go i steruj nim tak,
                     aby nie wyszedł poza jego granice. </li>
                 <li> Nasz wąż nie lubi jak się robi z niego durnia – nie każ mu więc gonić własnego ogona, ani tym
                     bardziej, nie uderzaj jego głową w resztę ciała. </li>
-                <li> Nasz wąż nie lubi się przejadać - 10 brokułów to dla niego wystarczająca dawka. Jeśli uda Ci się
-                    zdobyć 10 punktów – WYGRYWASZ! </li>
-                <li> Żeby nie było za łatwo – w pewnym momencie gry pojawią się dodatkowe przeszkody. Uważaj na nie i
-                    nie pozwól, żeby wąż ucierpiał. </li>
+                <li> Żeby nie było za łatwo – w pewnym momencie gry wąż zyska więcej sił i zacznie wić się szybciej.
+                        Nie pozwól, żeby wąż ucierpiał. </li>
+                <li> Pobijaj swoje rekordy - za każdy pobity rekord przewidziana jest atrakcyjna nagroda dźwiękowa. </li>
             </ol>
             <p>
-                Powyższe zasady możesz sobie przypomnieć klikając na przycisk „zasady gry”.
+                Powyższe zasady możesz sobie przypomnieć klikając podczas gry przycisk „zasady gry”.
                 <br>Dobrej zabawy :)
             </p>
             <button class='gameStartButton'>ROZPOCZNIJ GRĘ!</button>
