Dodaneie argumentu do funkcji obslugujacej przejscia w karuzeli

--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
 
     <!------------------ HERO -------------------------->
     <div class="hero__wrapper" id="dom">
-      <div class="hero__background  slide"></div>
-      <div class="hero__background slide--1 slide"></div>
-      <div class="hero__background slide--2 slide"></div>
+      <div class="hero__background slide"></div>
+      <div class="hero__background slide--1 slide none"></div>
+      <div class="hero__background slide--2 slide none"></div>
 
     <header class="hero">
       <article class="hero__content">
         <div class="hero__logo">
-          <img class="logo" src="../Identyfikacja/logo_1.png" alt="" />
+          <img class="logo" src="./Identyfikacja/logo_1.png" alt="" />
         </div>
         <!-- --HASLA-- -->
         <div class="hero__intro">
@@ -547,7 +547,7 @@
     </div>
   </div>
 
-  <script src="/script.js"></script>
+  <script src="./script.js"></script>
 </body>
 
 </html>
