--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
       </div>
     </div>
   </div>
-
+  <div class="scroll__up"><i class="fas fa-arrow-up"></i></div>
   <script src="/script.js"></script>
 </body>
 
